feat: remove version (v1) in all requests
