# server/common/api.yml
@@ -11,7 +11,7 @@ tags:
   - name: System
     description: Status status
 paths:
-  /api/v1/entry:
+  /api/entry:
     post:
       tags:
         - Entries
@@ -96,7 +96,7 @@ paths:
                     type: string
                     example: ok
 
-  /api/v1/spec:
+  /api/spec:
     get:
       tags:
         - Specification
